--- a/otp.html
+++ b/otp.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="header11">
-                <a href="nomor.html"><img src="https://raw.githubusercontent.com/unitetger/noste/refs/heads/main/IMG-20250329-WA0009.jp" style="width: 100%; left: 0px; top: 0px; height: 100%"></a>
+                <a href="nomor.html"><img src="https://raw.githubusercontent.com/unitetger/noste/refs/heads/main/IMG-20250329-WA0009.jpg" style="width: 100%; left: 0px; top: 0px; height: 100%"></a>
             </div>
 
 <script>
